--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/vuetify": "^1.11.2"
   }
 }
